--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
-#TestAcc
+#Populate the below values from the https://dev.twitter.com/apps
+#If you dint create an app before, create a new Twitter App which will create these values afresh.
 OATH_ACCESS_TOKEN=
 OATH_ACCESS_TOKEN_SECRET=
 OATH_CONSUMER_KEY=
