--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <logback.version>1.0.13</logback.version>
         <slf4j-log4j12.version>1.7.5</slf4j-log4j12.version>
         <storm.version>0.8.2</storm.version>
