Changed license to APL from MIT; Updated README

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,6 +5,7 @@ OATH_ACCESS_TOKEN_SECRET=
 OATH_CONSUMER_KEY=
 OATH_CONSUMER_SECRET=
 
+# Please dont modify the following values. Leave them as is. 
 REPL_FACTOR=1
 HOST=localhost:9160
 CLUSTERNAME=Test Cluster
