--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>StormTweetsURLShortening</groupId>
-    <artifactId>StormTweetsURLShortening</artifactId>
+    <groupId>StormTweetsURLUnShortening</groupId>
+    <artifactId>StormTweetsURLUnShortening</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
@@ -16,7 +16,7 @@
         <junit.version>4.11</junit.version>
     </properties>
 
-    <name>StormTweetsURLShortening</name>
+    <name>StormTweetsURLUnShortening</name>
     <url>github.url</url>
 
     <build>
@@ -42,7 +42,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>urlshorten.topology.UnshortenTopology</mainClass>
+                            <mainClass>org.p7h.storm.urlshorten.topology.UnshortenTopology</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
