Fixed OAuth Spelling mistake.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,13 @@
 #Populate the below values from the https://dev.twitter.com/apps
 #If you dint create an app before, create a new Twitter App which will create these values afresh.
-OATH_ACCESS_TOKEN=
-OATH_ACCESS_TOKEN_SECRET=
-OATH_CONSUMER_KEY=
-OATH_CONSUMER_SECRET=
+OAUTH_ACCESS_TOKEN=122528040-vEjt7MnstwrRhg5ce3MQVyVte8wbLF3ekt82Osjt
+OAUTH_ACCESS_TOKEN_SECRET=oozVp6gfTvkVutZk7izqtnU8LDIsGFVB4OTFvrUG3I
+OAUTH_CONSUMER_KEY=p6CpobW2cDsyDtZ1MbtzFQ
+OAUTH_CONSUMER_SECRET=l4uORxPTE6xGE0CaY9wz8pwoZyg7N5DuWWa5zZr58
 
-# Please dont modify the following values. Leave them as is. 
+#BING_MAPS_API_KEY=AlM1v8DHWnSJqtO1bz-mx6gSfZkLwj2hL7LnKj6pKKU_hkBZd_9abKHNJ846ReAG
+BING_MAPS_API_KEY=AgFYf5rQlubHhi4ZJPTH_1eFVvxiW-lhmcTxfbnxAFehvysIjVGY_x5qVi3OujWF
+
 REPL_FACTOR=1
 HOST=localhost:9160
 CLUSTERNAME=Test Cluster
